--- a/src/origin/popup.html
+++ b/src/origin/popup.html
@@ -1,37 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>popup</title>
-    <style>
-        input {
-            background-color: #fafbfc;
-            line-height: 20px;
-            width: 200px;
-            color: #24292e;
-            vertical-align: middle;
-            border: 1px solid #d1d5da;
-            border-radius: 3px;
-            margin: 10px 10px;
-        }
-        button {
-            font-size: 12px;
-            line-height: 20px;
-            background-color: #28a745;
-            width: 120px;
-            display: block;
-            white-space: nowrap;
-            vertical-align: center;
-            border-radius: 0.25em;
-            border: 1px solid rgba(27, 31, 35, 0.2);
-            margin-left: auto;
-            margin-right: auto;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>popup</title>
+  <style>
+    body {
+      width: 280px;
+      height: 230px;
+    }
+    .panel {
+      height: 100%;
+      width: 100%;
+      text-align: center;
+    }
+    input {
+      background-color: #fafbfc;
+      line-height: 20px;
+      width: 260px;
+      color: #24292e;
+      vertical-align: middle;
+      border: 1px solid #d1d5da;
+      border-radius: 3px;
+      margin: 10px auto 0 auto;
+    }
+    .supplement {
+      display: block;
+      font-size: 8px;
+      color: gray;
+    }
+    button {
+      font-size: 12px;
+      line-height: 20px;
+      background-color: #2ab2d8;
+      width: 120px;
+      display: block;
+      white-space: nowrap;
+      vertical-align: center;
+      border-radius: 0.25em;
+      border: 1px solid rgba(27, 31, 35, 0.2);
+      margin: 10px auto 0 auto;
+    }
+  </style>
 </head>
 <body>
-    <input type="text" id="token" name="token" placeholder="Input your GitHub token."/>
-    <button id="saveToken">Save</button>
-    <script src="popup.js"></script>
+<div class="panel">
+  <img src="images/github-bugspots-logo.png" alt="github-bugspots-logo" title="github-bugspots-logo"/>
+  <input type="text" id="token" name="token" placeholder="Input your GitHub token."/>
+  <span class="supplement">You can get your token <a href="https://github.com/settings/tokens">here</a>.</span>
+  <input type="text" id="regex" name="regex" placeholder="Input bugfix indicator regex.">
+  <button id="saveToken">Save</button>
+  <script src="popup.js"></script>
+</div>
 </body>
 </html>
